examples/cert-manager/editors/vscode/ingress.yaml
# Copyright (c) 2022, Nadun De Silva. All Rights Reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#   http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - editor.vscode.local
    secretName: vscode-wildcard-tls
  rules:
  - host: editor.vscode.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vscode
            port:
              number: 80
